--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,59 @@
-.snowflake {
-   position: absolute; 
-   /* top: 10%; */
-  /* transition: top 15s; */
+.wrapper {
+  width: 80%;
+  margin: 0 auto;
+  padding: 0 30px;
 }
 
-@keyframes anime {
-    0% {
-        top: 10%;
-    }
-
-    100% {
-        top: 90%;
-    }
+.output {
+  width: 100%;
+  height: 20vh;
+  margin-bottom: 50px;
+  font-size: 14px;
+  line-height: 1.5em;
 }
 
-.test  {background-color: rgb(23.49, 0, 0)}
-/* .snowflake:hover {
-     top: 90%;
-  transition: top 15s;
-} */
-td {
-    width: 20px;
+.keyboard {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border: 2px solid #040211;
+  border-radius: 5px;
+  background-color: #2e2a2a;
 }
-/* 
-.snowflake:after {
-      content: "\2744"; 
-  color: black;
- } */
+
+.key {
+  width: 5.8%;
+  margin: 3px;
+  text-align: center;
+  font-size: 20px;
+  line-height: 40px;
+  background-color: #585858;
+  border-radius: 3px;
+  color: #ffffff;
+  cursor: pointer;
+}
+.key:active {
+  transform: scale(0.9);
+  transition: transform 0.1s;
+  background-color: #04a8ad;
+}
+
+.middle-key {
+  width: 8.7%;
+}
+
+.wide-key {
+  width: 12.76%;
+}
+
+.space-key {
+  width: 39.44%;
+}
+
+.active-key {
+  transform: scale(0.9);
+  transition: transform 0.1s;
+  background-color: #04a8ad;
+}
+
+/*# sourceMappingURL=style.css.map */
