--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@
   width: 80%;
   margin: 0 auto;
   padding: 0 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .output {
   width: 100%;
   height: 20vh;
   margin-bottom: 50px;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.5em;
 }
 
@@ -16,21 +17,22 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  border: 2px solid #040211;
+  border: 2px solid black;
   border-radius: 5px;
   background-color: #2e2a2a;
 }
 
 .key {
   width: 5.8%;
-  margin: 3px;
+  margin: 0.2%;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 40px;
   background-color: #585858;
   border-radius: 3px;
   color: #ffffff;
   cursor: pointer;
+  user-select: none;
 }
 .key:active {
   transform: scale(0.9);
